# fastapi-naive-admin

./: .gitignore  README.md  base.sql  config-template.yaml  main.py  package-lock.json  pyproject.toml  requirements.txt
apis/: __init__.py
apis/auth/: auth_urls.py  menus_api.py  roles_api.py  users_api.py
apis/login/: async_routes_api.py  login_api.py  login_urls.py
apis/system/: depends.py  settings_api.py  system_url.py
apis/test/: test.py  test_url.py
core/Events/: shutdown_events.py  start_events.py
core/Exeption/: Exception.py  Response.py  init.py
core/LogManage/: cusotm_log.py  init_log.py
core/Middleware/: RequestIpChaeckMiddleware.py  RequestLogMiddleware.py
core/Routers/: cusotm_route.py  routers.py  routers_init.py
core/Security/: auth_ip_check.py  auth_jwt.py  auth_totp.py
extend/: db_init.py  redis_init.py
extend/datebase/: init.py
extend/ldap/: auth_mixin.py
extend/redis/: init.py
extend/sends/: send_mail.py
models/: __init__.py  base.py  fileds.py
models/auth/: model.py
models/system/: default_seetings.py  model.py
schemas/: base.py
schemas/auth/: menus_schema.py  roles_schema.py  users_schema.py
schemas/login/: async_routes_schema.py  login_schema.py
schemas/system/: settings_schema.py
schemas/test/: test_schemas.py
static/docs-ui/: redoc.standalone.js  swagger-ui-bundle.js
templates/: system-info.html
templates/src/: email.mjml
utils/: cache_tools.py  config.py  config_yaml_load.py  encryption.py  ipaddress_tools.py  password_tools.py  serialization_tools.py
utils/send_tools/: send_mail.py
